[package]
name = "sam-lmdb-rs"
version = "0.16.3"
license = "Apache-2.0"
edition = "2024"
description = "Idiomatic and safe LMDB wrapper."
homepage = "https://github.com/TheQuantumPhysicist/sam-lmdb-rs"
repository = "https://github.com/TheQuantumPhysicist/sam-lmdb-rs"
readme = "README.md"
keywords = ["LMDB", "database", "storage-engine", "bindings", "library"]
categories = ["database"]

exclude = [
  # Exclude CI config files from package.
  "/.appveyor.yml",
  "/.travis.yml",
  "/azure-pipelines-template.yml",
  "/azure-pipelines.yml",
]

[lib]
name = "lmdb"

[workspace]
members = [
  "lmdb-sys",
]

[dependencies]
bitflags = "2"
byteorder = "1"
libc = "0.2"
fs4 = { version = "1.1", features = ["sync"] }
num = "0.4"

# The sys crate is a path dependency so that we always build against the
# in-tree, patched LMDB (imported from Monero, plus local fixes), which has
# diverged from the upstream lmdb-rkv-sys crate on crates.io.
#
# To publish this crate to crates.io, publish sam-lmdb-sys first; published
# builds resolve the dependency through the `version` below.
sam-lmdb-sys = { path = "./lmdb-sys", version = "0.11.3" }

[dev-dependencies]
rand = "0.10"
tempdir = "0.3"
page_size = "0.6"
criterion = "0.8"

[features]
default = []
with-asan = ["sam-lmdb-sys/with-asan"]
with-tsan = ["sam-lmdb-sys/with-tsan"]
with-fuzzer = ["sam-lmdb-sys/with-fuzzer"]
with-fuzzer-no-link = ["sam-lmdb-sys/with-fuzzer-no-link"]


[[bench]]
name = "cursor"
harness = false

[[bench]]
name = "transaction"
harness = false
